#APPBUG-2493 sort alignment corrected on ipad
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@28792 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickshop/sorter.css
+++ b/projects/Media/docroot/assets/css/quickshop/sorter.css
@@ -7,6 +7,7 @@
 .sorter strong {
 	margin-right:16px;
 	vertical-align: middle;
+  display:inline-block;
 }
 
 .sorter-element_list {
